Fixed word-wrap - css

--- a/src/components/Content/Home/NotesList/NoteElement/NoteElement.css
+++ b/src/components/Content/Home/NotesList/NoteElement/NoteElement.css
@@ -8,6 +8,7 @@
     padding: var(--padding-sm);
     border-radius: var(--border-radius);
     align-items: center;
+    word-wrap: break-word;
 }
 
 .notes-left-box {
